slurm-158.out
  File "/home/rice/jmc32/DNN_for_Pt_Assignment-master/DNN_Hyperparameters/DUMMYHyperasexamplerun.py", line 138
    print("Saved model to disk")
    ^
IndentationError: unexpected indent
('True negative total is ', 43613, 'out of', 100000)
('True positive total is ', 29252)
('False negative total is ', 26946)
('False positive total is ', 189)
('Any missed ones? ', 0)
